--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -330,3 +330,17 @@ img.large {
 .active {
   font-weight: bold;
 }
+/* PAGINATION */
+.pagination a {
+  padding: 1rem;
+  margin: 0.5rem;
+  border-radius: 0.5rem;
+  border: 0.1rem #a4a4a4 solid;
+  font-size: 1.6rem;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.pagination a.active {
+  font-weight: bold;
+}
