--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,6 +27,12 @@ body {
   grid-template-rows: 5rem 1fr 5rem;
   height: 100%;
 }
+@media only screen and (max-width: 800px) {
+  .grid-container {
+    grid-template-rows: 11rem 1fr 5rem;
+  }
+}
+
 header {
   grid-area: header;
   background-color: #203040;
